Support ES6+ syntax

--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "helixpay-js-sdk",
   "version": "1.0.0",
   "description": "Javascript SDK for HelixPay API",
-  "main": "index.js",
-  "module": "dist/helixpay.runtime.esm.js",
+  "main": "lib/index.js",
   "files": [
     "src",
     "dist/*.js"
   ],
   "scripts": {
+    "build": "babel ./src -d ./lib",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -16,5 +16,9 @@
     "javascript"
   ],
   "author": "HelixPay",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0"
+  }
 }
