--- a/package.json
+++ b/package.json
@@ -2,14 +2,21 @@
   "name": "helixpay-js-sdk",
   "version": "0.0.1",
   "description": "Javascript SDK for HelixPay API",
-  "main": "lib/index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/mjs/index.js",
+  "types": "dist/mjs/index.d.ts",
+  "exports": {
+      ".": {
+          "import": "./dist/mjs/index.js",
+          "require": "./dist/cjs/index.js"
+      }
+  },
   "files": [
-    "src",
-    "dist/*.js"
+    "dist/"
   ],
   "scripts": {
-    "build": "npm run lint && babel ./src -d ./lib",
-    "lint": "eslint ./src",
+    "build": "rm -fr dist/* && tsc -p tsconfig.json && tsc -p tsconfig-cjs.json && ./fixup",
+    "lint": "eslint src",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepublishOnly": "npm run build"
   },
@@ -20,10 +27,11 @@
   "author": "HelixPay",
   "license": "ISC",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.28.0",
-    "@typescript-eslint/parser": "^5.28.0",
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "eslint": "^8.17.0"
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.25",
+    "eslint": "^8.13.0",
+    "jest": "^27.5.1",
+    "ts-jest": "^27.1.4",
+    "typescript": "^4.7.4"
   }
 }
